# ttd-pde-solver

./: .gitignore  README.md  codebook.toml  pyproject.toml  ruff.toml
src/numpy_ttd/: __init__.py  ttd.py
